[package]
name = "xstream-util"
version = "1.2.1"
authors = ["Erik Brinkman <erik.brinkman@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/erikbrinkman/xstream"
documentation = "https://docs.rs/xstream-util"
repository = "https://github.com/erikbrinkman/xstream"
license = "MIT"
description = "A command line tool to split a stream to child processes"
edition = "2021"

[features]
binary = ["clap"]

[dependencies]
clap = { version = "^3.2.12", features = [ "derive" ], optional = true }

[lib]
name = "xstream_util"

[[bin]]
name = "xstream"
path = "src/main.rs"
doc = false
required-features = [ "binary" ]

