[package]
name = "xstream-util"
version = "2.0.0"
authors = ["Erik Brinkman <erik.brinkman@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/erikbrinkman/xstream"
documentation = "https://docs.rs/xstream-util"
repository = "https://github.com/erikbrinkman/xstream"
license = "MIT"
description = "A command line tool to split a stream to child processes"
edition = "2021"

[features]
default = [ "binary" ]
binary = ["clap"]

[dependencies]
clap = { version = "4.0", features = [ "derive", "wrap_help" ], optional = true }

[lib]
name = "xstream_util"

[[bin]]
name = "xstream"
path = "src/main.rs"
doc = false
required-features = [ "binary" ]
